# libigl-example-project

./: CMakeLists.txt  README.md  main.cpp
